--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins','Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   animation: fadeIn 0.3s ease-in;
 }
 
@@ -131,38 +131,92 @@ body {
   color: linear-gradient(#000);
 }
 
-/* MISSÃO VISÃO VALORES */
+/* Sobre */
 
-.social {
-  background-color: #e5e5e5;
-  display: flex;
-}
-
-.social .container {
-  justify-content: center;
-}
-
-.box img {
-  width: 170px;
-}
-
-.social .container .boxes {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 30px 0;
-}
-
-.social p {
-  text-align: center;
-}
-
-.box {
+.sobre{
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
+.sobre .title{
+  display: flex;
+  justify-content: center;
+  font-size: 36px;
+  font-weight: 600;
+  padding: 20px 0 60px 0;
+}
+
+.sobre .container{
+  display: flex;
+  width: 80%;
+  padding-bottom: 50px;
+}
+
+.sobre .container .img-lateral img{
+  width: 80%;
+  border-radius: 7px;
+}
+
+.sobre .container .text{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  line-height: 1.8;
+  font-size: 18px;
+  position: relative;
+  top: 50px;
+  
+}
+
+.convite{
+  display: flex;
+  height: 50vh;
+  color: #000;
+  background-image: url('../assets/imgs/convite-banner.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  padding-top: var(--tamanho-header);
+}
+
+.convite .container{
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+
+.convite .container .text{
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+  font-weight: 500;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+}
+
+.convite .container .btn-convite{
+  padding-top: 20px;
+}
+
+.btnC{
+  color: #000;
+  background-color: #fff;
+  padding: 12px 20px;
+  border-radius: 5px;
+  transition: 0.5s;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.btnC:hover{
+  background-color: #e5e5e5;
+}
+
+.convite .container .btn-convite a{
+  text-decoration: none;
+}
 /* FOOTER */
 
 .footer {
