--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -115,7 +115,8 @@ body {
   background-color: #020300;
 }
 
-.dash-header img{
+.dash-header img,
+.header-left img{
   height: 50px;
 }
 
@@ -359,7 +360,7 @@ canvas {
   display: flex;
   width: 70%;
   height: fit-content;
-  background-color: #161618;
+  background-color: #F6F7F8;
   position: relative;
   top: 0;
   left: 25%;
