--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -27,6 +27,29 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url("../assets/imgs/black-hole-2.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: 80px -100px;
+}
+
+#pontuacaoEJogo{
+    display: flex;
+    justify-content: center;
+    width: 75% !important;
+    gap: 100px;
+    
+    background-color: #fafafa;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+#pontuacao{
+    font-weight: 500;
+    background-color: #eef4ff;
+    border-radius: 5px;
 }
 
 button{
@@ -46,6 +69,11 @@ button:hover{
     background-color: #087a91;
 }
 
+button:disabled{
+    background-color: #CCCCCC;
+    color: #212427;
+}
+
 .flex-colunar {
     display: flex;
     flex-direction: column;
@@ -53,14 +81,6 @@ button:hover{
 
 .width-fit-content {
     width: fit-content;
-}
-
-.border-primary {
-    border: 3px solid var(--primary-brand-color);
-}
-
-.border-secondary {
-    border: 3px solid var(--secondary-brand-color);
 }
 
 .padding-8 {
@@ -74,16 +94,23 @@ button:hover{
 .text-success-with-bg {
     color: var(--success-dark);
     background-color: var(--success-light);
+    padding: 2px;
+    border-radius: 5px;
+    font-weight: 600;
 }
 
 .text-warning-with-bg {
     color: var(--warning-dark);
     background-color: var(--warning-light);
+    padding: 2px;
+    border-radius: 5px;
 }
 
 .text-danger-with-bg {
     color: var(--danger-dark);
     background-color: var(--danger-light);
+    padding: 2px;
+    border-radius: 5px;
 }
 
 .text-new-gray {
