--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -599,3 +599,38 @@ canvas {
   font-size: 20px;
   text-align: center;
 }
+
+.partidas{
+  width: 420px;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+#graficos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.graficoRosca{
+  width: 200px;
+  padding: 20px;
+}
+
+#graficos .container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dash{
+  background-image: url(../assets/imgs/black-hole-1.jpg);
+  background-repeat: no-repeat;
+  background-position: fixed;
+}
+
+#graficos .container h3{
+  color: #fff;
+  font-size: 20px;
+}
